[package]
name = "tokenizer-trainer"
version = "1.0.0"
edition = "2021"

[dependencies]
tokenizers = { version = "0.15", features = ["http"] }
regex = "1.10"
rayon = "1.10"
memmap2 = "0.9"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "convert"
path = "src/convert.rs"
